--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
 }
 
 .wrapper {
-  background: linear-gradient(to right, #e67e22, #e74c3c);
+  background: linear-gradient(to right, blue, green);
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -16,7 +16,7 @@ body {
 
 .main {
   height: 90vh;
-  background: #fff;
+  background: aqua;
   box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
   width: 80%;
   margin: 0 auto;
@@ -24,7 +24,7 @@ body {
 
 .title-container {
   height: 90vh;
-  background: url("img/bg.jpg") center center no-repeat;
+  background: url("img/front-range.jpg") center center no-repeat;
   background-size: cover;
   display: flex;
   align-items: center;
@@ -34,6 +34,7 @@ body {
 }
 
 .title-container__title {
+  color: black;
   font-size: 50px;
   letter-spacing: 2px;
   line-height: 1.3;
@@ -41,11 +42,13 @@ body {
 }
 
 .title-container__subtitle {
+  color: black;
+  font-size: 40px;
   font-style: italic;
-  font-weight: 100;
+  font-weight: 1;
   letter-spacing: 1px;
   line-height: 1.5;
-  font-family: "Merriweather", serif;
+  font-family: 'Roboto Slab', serif;
 }
 
 .form-container {
