--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ body {
   letter-spacing: 1px;
   line-height: 1.5;
   font-family: 'Roboto Slab', serif;
+  box-shadow: 5px 10px aqua;
 }
 
 .form-container {
